--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,3 +7,4 @@
 @use './components/profile-link';
 @use './components/context-menu';
 @use './components/recursive-form';
+@use './components/login-field';
